<resources>
    <string name="app_name">Cactus House</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="blog_name">Nama</string>
    <string name="blog_detail">Detail</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="blog">Blog</string>
    <string name="judul_blog">Apa Bedanya Kaktus dan Sukulen?</string>
    <string name="publikasi">Admin Cactus House</string>
    <string name="date">30 Maret 2020</string>
    <string name="p1">Kalau bicara soal tanaman, biasanya yang terbayang di kepala adalah berkebun di lahan yang luas atau bercocok tanam di sawah. Tetapi bagi yang tinggal di perkotaan, jumlah lahan seringkali menjadi hambatan. Oleh karena itu, untuk menyiasatinya, warga perkotaan biasanya menggunakan alternatif kebun vertikal. Selain itu, ketimbang pohon yang memakan banyak tempat, tanaman hias dan tanaman kecil seperti kaktus kerap kali menjadi pilihan.</string>
    <string name="head_p2">Perbedaan Cactus dan Sukulen</string>
    <string name="p2">Pada dasarnya, sukulen bukan merupakan nama sebuah family tumbuhan seperti kaktus. Akan tetapi sukulen merupakan istilah untuk tumbuhan yang mempunyai karakter menyerap dan menyimpan air pada batang utamanya. Secara fisik sukulen memiliki kelopak seperti daun,  Sementara, kaktus mengganti  jaringan daun dalam bentuk duri.  Jadi semua kaktus adalah tanaman sukulen. Namun tidak semua sukulen adalah kaktus.</string>
    <string name="p3">Informasi umum yang sering kita dengar mengenai bagaimana merawat kaktus dan sukulen adalah kita tidak boleh terlalu banyak menyiramnya dengan air. Bukan hanya itu, tapi ada beberapa hal yang harus diperhatikan dalam merawat tanaman kaktus dan sukulen seperti cahaya, media tanam dan wadah yang kita pakai untuk menanam."</string>
    <string name="quotes">"Arti tanaman bagi saya saat ini bukan lagi sekedar hobi. Tetapi juga networking. Dari tanaman saya bisa kenal banyak orang dengan minat serupa dan berkembang menjadi rekan kerja - Rangga Kuzuma</string>
    <string name="blog_title">Cactus House</string>
    <string name="blog_desc">Cactus House adalah sebuah blog dimana pencinta kaktus dapat membaca artikel-artikel menarik dari sesama pencinta kaktus</string>
    <string name="perkenalan">Halo saya Mira, artikel ini bersumber dari dekoruma.com pada artikel dengan judul "Apa bedanya kaktus dan sukulen? Plus cara perawatan dan tips untuk pemula"</string>
    <string name="blog_jenis_title">5 Jenis Kaktus Ini Masih Jarang Banget Dikenal Orang</string>
    <string name="blog_jenis_p1">Geliat tanaman hias di Indonesia ternyata begitu tinggi, tak terkecuali adalah kaktus. Siapa sih yang nggak kenal dengan jenis tanaman satu ini. Tanaman yang terkenal karena daya tahan hidupnya yang tinggi di berbagai kondisi ini banyak banget digandrungi oleh berbagai kalangan. Berikut ini adalah 5 jenis kaktus yang masih jarang banget dikenal orang.</string>
    <string name="blog_jenis_p2_content">Jenis kaktus ini berasal dari Thailand, bentuknya yang seperti bola dengan berbagai corak dan warna membuat kaktus ini memiliki keunikannya sendiri. meskipun bentuknya “nggak kaktus-kaktus banget” karena nggak ada durinya, jenis astrophytum ini memiliki daya tahan hidup yang tinggi dalam berbagai kondisi cuaca. Di Indonesia, jenis Astrophytum dibanderol dengan harga mulai dari 100rb sampai 500rb.</string>
    <string name="blog_jenis_p2_title">Cantiknya kaktus jenis astrophytum, kaktus untuk kolektor pemula yang harganya bisa dibilang masih murah</string>
    <string name="blog_jenis_p3_title">Gymnocalicium, salah satu jenis kaktus yang terkenal dengan bentuknya yang kekar dan memiliki banyak paduan warna</string>
    <string name="blog_jenis_p3_content">Kaktus jenis gymnolycium ini sebenarnya ada juga yang berasal dari Indonesia sendiri lo. Tapi kebanyakan warnanya memang tidak secantik hasil perkawinan silang yang banyak dikembangkan di Thailand. Jenis gymnocalicium sendiri masih dibagi dalam beberapa bentuk/clone lagi, salah satunya yang bisa kita jumpai dengan mudah adalah gymnocalicium mihanovichi dan gymocalycium friedrichi atau biasa disebut dengan LB2178.</string>
    <string name="blog_jenis_p4_title">Si batu hidup, Lithops!</string>
    <string name="blog_jenis_p4_content">Jenis kaktus yang satu ini mungkin jarang kita lihat untuk dipelihara di dalam ruangan seperti di kafe dan semacamnya. Dikarenakan bentuknya yang kecil imut dan pendek, kaktus ini kurang pas jika untuk hiasan interior.</string>
    <string name="blog_jenis_p5_title">Amazing deaw, berlian hidup dari negeri Gajah Putih.</string>
    <string name="blog_jenis_p5_content">Kaktus jenis amazing deaw ini memiliki bentuk yang hampir mirip dengan LB2178 namun warnanya kayak nggak bener-bener kaktus lo! saking uniknya warna kaktus jenis ini, amazing deaw seringkali dikira sebagai kaktus palsu oleh orang awam.</string>
    <string name="blog_jenis_p6_title">Ariocarpus, kaktus Godzila yang lebih mirip tumbuhan pada jaman purbakala</string>
    <string name="blog_jenis_p6_content">Bentuknya yang kekar menunjukkan kalau dia adalah tanaman yang kuat, makanya sering disebut juga dengan kaktus godzila. Harganya pun tidak main-main, seperti yang dilansir pada Radarmalang, kaktus jenis ini dihargai rata-rata mulai dari 6 juta rupiah untuk ukuran yang sudah lumayan besar.</string>
    <string name="blog_jenis_perkenalan">Halo saya Mira, artikel ini bersumber dari hipwee.com pada artikel berjudul "Suka Sama Kaktus? 5 Jenis Kaktus Cantik Ini Masih Jarang Banget Dikenal Orang"</string>
    <string name="blog_begini_title">Begini Cara Merawat Sukulen yang Benar</string>
    <string name="blog_begini_p1">Sukulen merupakan salah satu jenis tanaman hias yang tergolong mudah perawatannya. Tanaman yang dikenal dari bentuk daunnya yang tebal ini mampu menyimpan air sehingga tidak mudah layu seperti daun pada umumnya. Namun, sekalipun perawatan sukulen mudah bukan berarti tanaman ini bisa diabaikan. Simak, begini cara merawat sukulen yang benar.</string>
    <string name="blog_begini_p2_title">Sukulen Dalam Ruangan</string>
    <string name="blog_langkah_p3_title">Masukkan media tanam pada pot</string>
    <string name="blog_merawat_title">Tips Merawat Tanaman Sukulen</string>
    <string name="blog_merawat_p1">Salah satu dekorasi yang akhir-akhir ini cukup populer adalah tanaman sukulen. Tidak sedikit orang berpendapat jika tanaman yang satu ini sangat mudah dirawat. Yang mereka ketahui hanyalah tanaman ini hanya perlu disiram sesekali dan pencahayaan harus pas. Padahal, pemahaman yang terlalu mengeneralisasi seperti itulah yang membuat tanaman menjadi busuk dan mati. Sebelum membeli tanaman yang satu ini, simak dahulu yuk tips yang harus diperhatikan.</string>
    <string name="blog_merawat_p2_title">Pilih Pot yang Bawahnya Berlubang</string>
    <string name="blog_merawat_p2_content">Pot yang bawahnya berlubang akan membuat air siraman cepat merembes keluar dan tidak menggenang di dalam pot. Media tanaman yang basah atau lembap adalah penyebab utama akar sukulen membusuk. Pot yang paling baik untuk menanam sukulen adalah yang berbahan tembikar dan terakota karena bahannya yang bisa menyerap air dan mengeluarkannya dari pori-pori.</string>
    <string name="blog_merawat_p3_content">Karena tumbuhan yang satu ini tidak boleh terkena air terlalu lama, kamu bisa meletakkan pasir malang atau bebatuan di lapisan paling bawah pada pot untuk mengurangi kelembapan. Setelah itu,campur tanah dengan pupuk kandang dan tutupi bagian atasnya dengan sekam bakar. Jika bahan yang dimilik terbatas, langsung saja masukan tanah, dengan catatan lubang drainase pot harus berukuran besar.</string>
    <string name="blog_merawat_p4_title">Simpan di Tempat yang Tidak Terkena Cahaya Matahari Langsung</string>
    <string name="blog_merawat_p4_content">Walaupun tanaman sukulen memiliki habitat asli di daerah kering, bukan berarti tanaman ini harus terpapar cahaya matahari terus-menerus. Sukulen hanya butuh terpapar sinar matahari pagi selama 5-6 jam setiap harinya untuk tumbuh dengan baik. Jauhkan sukulen dari panas matahari yang terik karena cahaya yang menyengat bisa membuat daunnya terbakar sehingga muncul noda kehitaman.</string>
    <string name="blog_merawat_p5_title">Siram Setiap 1 atau 2 Minggu Sekali</string>
    <string name="blog_merawat_p5_content">Intensitas penyiraman sebenarnya tergantung dari tempat dan di mana tanaman disimpan. Untuk tanaman yang ada di dalam ruangan, itensitas penyiraman tentunya akan lebih sedikit daripada sukulen yang disimpan di luar ruangan.</string>
    <string name="blog_merawat_p6_title">Gunakan Moisture Meter</string>
    <string name="blog_merawat_p6_content">Salah satu alat yang wajib kamu miliki untuk mengetahui kelembapan dengan akurat adalah moisture meter. Alat yang satu ini akan memberikan informasi mengenai tingkat kelembapan tanah, intensitas cahaya, dan pH tanah. Terkadang, tanaman bisa saja terlihat kering padahal dalamnya ternyata lembap. Untuk itulah, moisture meter hadir agar kamu bisa mendeteksi kelembapan tanamanmu dengan akurat.</string>
    <string name="blog_merawat_p7_title">Beri Pupuk Secara Berkala</string>
    <string name="blog_merawat_p7_content">Untuk memastikan tumbuh kembang dari sukulen yang kamu miliki, kamu harus memastikan tanaman mendapatkan nutrisi yang cukup. Sukelen bisa mendapatkan nutrisi tersebut dari pupuk yang harus kamu berikan secara berkala. Jenis pupuk yang biasa digunakan adalah NPK yang kaya akan unsur hara nitrogen, fosfor, dan kalium.</string>
    <string name="blog_merawat_perkenalan">Halo, saya Mira, artikel ini bersumber dari 99.co, pada artikel berjudul Tips Merawat Tanaman Sukulen Yang Cantik Agar Tidak Busuk</string>
    <string name="blog_kaktus_title">Kaktus, Tanaman Abadi yang Dilindungi</string>
    <string name="blog_kaktus_p1">Kota Texas memang identik dengan koboi, Indian, gurun, dan kaktus. Sebuah kota di Amerika Serikat yang pernah menjadi markas jagoan berkuda dengan topi khas--seperti kerap dilihat dalam film itu--memang di kelilingi gurun. Bila menyebut daerah gersang tersebut, tak heran benak kita pun mengarah kepada tanaman berduri yang mampu hidup tahan lama kendati tak mendapat air selama musim panas. Namanya kaktus. Sayang, belakangan ini, kaktus kian punah saja.</string>
    <string name="blog_kaktus_p2_content">Tanaman yang masih famili Cactaceae ini mencakup lebih dari 2.000 jenis tumbuhan aneh yang ditemukan di Amerika Utara dan sebagian kecil ditemukan di Amerika Selatan, Afrika, dan Srilanka. Kaktus menyimpan air dalam batangnya yang tebal dan berbentuk aneh. Tumbuhan ini tak berdaun, tapi mempunyai duri yang digunakan sebagai pelindung dari serangan binatang. Ada kaktus paling aneh yaitu kaktus raksasa--kini sudah hampir punah--yang bisa hidup hingga 250 tahun. Bentuknya tegak berdiri, persis tempat lilin raksasa di gurun-gurun barat daya AS. Dalam film-film koboi, baik yang kartun ataupun bukan, kaktus jenis ini sering diperlihatkan.</string>
    <string name="blog_kaktus_p3_content">Nah, keunikan yang dimiliki tanaman yang kerap disebut tumbuhan seumur hidup itu kini memancing banyak orang untuk mengkoleksinya. Di AS, banyak orang menjadikan kaktus sebagai barang dagangan. Buntutnya, berbagai jenis kaktus pun terancam punah karena sebagian warga mencuri dari habitat aslinya untuk dijual. Satu di antara habitat kaktus jenis langka dan bernilai tinggi adalah di Gurun Chihuahuan, sekitar 15 mil sebelah utara El Paso, Texas.</string>
    <string name="blog_kaktus_perkenalan">Halo, saya Mira, artikel ini bersumber dari liputan6.com, pada artikel berjudul Kaktus, Tanaman Abadi yang Dilindungi</string>
</resources>