<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BlogDetail"
    android:orientation="vertical"
    android:background="#FFF">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blog_kaktus_title"
                android:textSize="30sp"
                android:textColor="#2d3436"
                android:textStyle="bold"
                android:typeface="serif"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="3dp">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/user"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/publikasi"
                    android:paddingLeft="5dp"
                    android:typeface="serif"
                    android:textSize="13dp"/>
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="20dp"
                    android:src="@drawable/calendar"
                    android:paddingLeft="15dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:paddingLeft="5dp"
                    android:textSize="13dp"
                    android:typeface="serif"/>
            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="370dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/j" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blog_kaktus_p1"
                android:typeface="serif"
                android:textColor="#2d3436"
                android:textSize="14sp"
                android:layout_marginTop="15dp"
                android:lineHeight="20sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blog_kaktus_p2_content"
                android:typeface="serif"
                android:textColor="#2d3436"
                android:textSize="14sp"
                android:lineHeight="20sp"
                android:layout_marginTop="10dp"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="370dp"
                android:src="@drawable/b"
                android:layout_marginTop="15dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blog_kaktus_p3_content"
                android:typeface="serif"
                android:textColor="#2d3436"
                android:textSize="14sp"
                android:lineHeight="20sp"
                android:layout_marginTop="15dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/mira"
                    android:layout_gravity="center_vertical"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Penulis"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="#2d3436"
                        android:typeface="serif" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/blog_kaktus_perkenalan"
                        android:typeface="serif"
                        android:textSize="12sp"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Blog Post"
                    android:textColor="#2d3436"
                    android:textStyle="bold"
                    android:typeface="serif"
                    android:textSize="20sp"
                    android:layout_marginBottom="8dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_heroes"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:listitem="@layout/item_blog" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:padding="10dp"
        android:background="#FF8367"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ha_1"
            android:id="@+id/like"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ha_2"
            android:id="@+id/dislike"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ha_3"
            android:id="@+id/comment"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ha_4"
            android:id="@+id/share"/>
    </LinearLayout>
</RelativeLayout>


